--- a/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
+++ b/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
@@ -208,7 +208,7 @@
     <div class="row">
 
         <div class="form-group col-md-4">
-          <button class="btn btn-success btn-sm" style="margin-top: 30px" (click)="submitFuture()">Find</button>
+          <button class="btn btn-success btn-sm" style="margin-top: 30px" (click)="submitFuture()">Update</button>
         </div>
 
     </div>
