--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -37,10 +37,19 @@
 
         </div>
 
-        <div class="form-group col-md-3">
-
-          <button class="btn btn-success" (click)="searchAttendance()">Search</button>
+        <div class="form-group col-md-4">
+          <label>Excel type</label>
+          <select class="form-control" id="excelType"  name="excelType">
+            <option value="">Select Type</option>
+            <option value="1">Only IN/OUT</option>
+            <option value="2">All Punch</option>
+          </select>
         </div>
+
+<!--        <div class="form-group col-md-3">-->
+
+<!--          <button class="btn btn-success" (click)="searchAttendance()">Search</button>-->
+<!--        </div>-->
 
 
 <!--        <div class="form-group col-md-3">-->
@@ -53,6 +62,11 @@
           <button class="btn btn-info pull-right" (click)="generateINOUTExcel()" *ngxPermissionsOnly="['admin']">Report (only in/out )</button>
 
         </div>
+<!--        <div class="form-group col-md-3">-->
+
+<!--          <button class="btn btn-info pull-right" (click)="generateMonthlyINOUTExcel()" *ngxPermissionsOnly="['admin']">Monthly Report</button>-->
+
+<!--        </div>-->
 
       </div>
       <hr>
@@ -74,7 +88,6 @@
         </tr>
         </thead>
         <tbody>
-
         </tbody>
       </table>
 
