--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -41,8 +41,9 @@
           <label>Excel type</label>
           <select class="form-control" id="excelType"  name="excelType">
             <option value="">Select Type</option>
-            <option value="1">Only IN/OUT</option>
-            <option value="2">All Punch</option>
+            <option value="1">Daily IN/OUT</option>
+            <option value="2">Daily All Punch</option>
+            <option value="3">Monthly Report</option>
           </select>
         </div>
 
