--- a/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
+++ b/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
@@ -49,7 +49,8 @@
 
                 <td>
 
-                  <a  class="btn btn-info" [target]="'_blank'" (click)="seeNotAssignedShift(asgL['id'])">see</a>
+<!--                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id']]"  (click)="seeNotAssignedShift(asgL['id'])">see</a>-->
+                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id']]">see</a>
 
 
                 </td>
