--- a/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
+++ b/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
@@ -50,7 +50,7 @@
                 <td>
 
 <!--                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id']]"  (click)="seeNotAssignedShift(asgL['id'])">see</a>-->
-                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id']]">see</a>
+                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id'],newS,newE]">see</a>
 
 
                 </td>
