--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -46,6 +46,18 @@
             <option value="3">Monthly Report</option>
           </select>
         </div>
+<!--        <div class="form-group col-md-8">-->
+
+<!--          <label>-->
+
+<!--          <input style="margin-top: 40px" type="checkbox" id="notAssignedRoster"/> Employee With out Roster-->
+<!--          </label>-->
+
+
+
+<!--        </div>-->
+
+
 
 
 <!--        <div class="form-group col-md-3">-->
