--- a/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
+++ b/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
@@ -50,7 +50,7 @@
                 <td>
 
 <!--                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id']]"  (click)="seeNotAssignedShift(asgL['id'])">see</a>-->
-                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id'],newS,newE]">see</a>
+                  <a  class="btn btn-info" [routerLink]="['/notAssignedinfoPerEmp', asgL['id'],asgL['attDeviceUserId'],newS,newE]">see</a>
 
 
                 </td>
@@ -62,55 +62,7 @@
         </div>
       </div>
 
-      <div class="row" *ngIf="assignedLog?.length >0">
 
-        <div class="form-group col-md-12">
-          <label style="text-align: center">Assigned shift</label>
-          <div class="table-responsive">
-            <table class="table table-bordered">
-              <tr>
-                <th>Date</th>
-                <th>Day</th>
-                <th>Time</th>
-                <th>Adjustment</th>
-                <th>Weekend</th>
-                <th>Action</th>
-              </tr>
-
-              <tr *ngFor="let asgL of assignedLog; let i = index">
-                <td>
-                  {{asgL['date']}}
-                </td>
-                <td>
-                  {{asgL['day']}}
-                </td>
-                <td>
-                  {{asgL['shiftName']}}
-                </td>
-                <td>
-                  {{asgL['adjustmentDate']}}
-                </td>
-                <td >
-                  <p *ngIf="asgL['weekend']" style="color: red">{{asgL['weekend']}}</p>
-                </td>
-
-                <td>
-
-                  <button *ngIf="!asgL['shiftLogId']" class="btn btn-info" (click)="edit(asgL['shiftLogId'],asgL['date'],asgL['empId'],content)">Add</button> &nbsp;&nbsp;
-                  <button *ngIf="asgL['shiftLogId']" class="btn btn-info" (click)="editShiftLog(asgL['shiftLogId'],asgL['date'],asgL['empId'],content)">Edit</button> &nbsp;&nbsp;
-                  <button class="btn btn-info" (click)="confirmDelete(asgL['shiftLogId'],asgL['date'],asgL['empId'])"> Delete</button> &nbsp;
-                  <button class="btn btn-info" (click)="AdjustmentShiftLog(asgL['shiftLogId'],asgL['date'],asgL['empId'],adjustment)"> Adjustment</button>&nbsp;&nbsp;
-                  <button class="btn btn-info" *ngIf="!asgL['weekend']" (click)="weekend(asgL['shiftLogId'],asgL['date'],asgL['empId'],'Add')">Add Weekend</button>&nbsp;&nbsp;
-                  <button class="btn btn-info" *ngIf="asgL['weekend']" (click)="weekend(asgL['shiftLogId'],asgL['date'],asgL['empId'],'Remove')">remove Weekend</button>&nbsp;&nbsp;
-
-                </td>
-
-              </tr>
-
-            </table>
-          </div>
-        </div>
-      </div>
 
 
 
