--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -5,25 +5,49 @@
   <div class="card-body">
     <div class="row">
 
-      <div class="form-group col-md-6">
-        <label>Company Name</label>
-        <select class="form-control" name="fkCompanyId">
-          <option value="">Select Company</option>
-          <option *ngFor="let comp of company" [value]="comp.id">
-            {{comp.companyName}}
-          </option>
-        </select>
-      </div>
+<!--      <div class="form-group col-md-6">-->
+<!--        <label>Company Name</label>-->
+<!--        <select class="form-control" name="fkCompanyId">-->
+<!--          <option value="">Select Company</option>-->
+<!--          <option *ngFor="let comp of company" [value]="comp.id">-->
+<!--            {{comp.companyName}}-->
+<!--          </option>-->
+<!--        </select>-->
+<!--      </div>-->
 
       <div class="form-group col-md-6">
         <label>Department Name</label>
         <input type="text" class="form-control" placeholder="dept name" name="departmentName" [(ngModel)]="departmentField.departmentName">
       </div>
+      <div class="form-group col-md-6">
+        <label>Department Head</label>
+        <input type="text" class="form-control" placeholder="dept Head name" name="departmentHead" [(ngModel)]="departmentField.deptHead">
+      </div>
+
+      <div class="form-group col-md-6">
+        <label>Department Parent</label>
+        <select  class="form-control" id="deptLevel" [(ngModel)]="departmentField.fkDeptParent" >
+          <option value="">Select Parent</option>
+          <option *ngFor="let department of departments" [value]="department.id">
+            {{department.departmentName}}
+          </option>
+        </select>
+      </div>
 
 <!--      <div class="form-group col-md-6">-->
 <!--        <label>Department Level</label>-->
-<!--        <input type="number" class="form-control" placeholder="level" name="deptLevel">-->
+<!--        <select (change)="onChangeEvent($event)" class="form-control" id="deptLevel">-->
+<!--          <option value="">Select Levels</option>-->
+<!--          <option   *ngFor="let level of Levels">-->
+<!--            {{level.deptLevel}}-->
+<!--          </option>-->
+<!--        </select>-->
 <!--      </div>-->
+
+    </div>
+
+
+    <div class="row">
 
       <div class="form-group col-md-2" *ngIf="checkId();else other_content">
         <button class="btn btn-success" (click)="onSubmit()">Insert</button>
@@ -39,6 +63,24 @@
       </div>
 
     </div>
+
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Department Name</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let dept of departments">
+        <td>{{dept.departmentName}}</td>
+        <td>
+          <!--<button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button>-->
+          <button class="btn btn-danger" (click)="editDept(dept)" style="margin-left: 20px;"> Edit</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
 
 
   </div>
