--- a/frontend/src/app/components/configuration/leave/leave.component.html
+++ b/frontend/src/app/components/configuration/leave/leave.component.html
@@ -54,8 +54,8 @@
           <th style="text-align: center"><input type="checkbox" class="SelectAll" id="selectall2"  (click)="selectAll()"/></th>
           <th>Name</th>
           <th>Employee ID</th>
-
           <th>Weekend</th>
+          <th>Action</th>
 
 
         </tr>
