--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -170,6 +170,7 @@
                 <ul class="submenu">
                   <li><a routerLink="configuration/department/add">Add Department</a></li>
 
+
                 </ul>
               </li>
 
@@ -211,16 +212,10 @@
             <ul class="submenu">
 <!--              <li><a routerLink="leave/apply">Apply Leave</a></li>-->
               <li><a routerLink="configuration/leave" *ngxPermissionsOnly="['admin']">Create Leave</a></li>
-              <!--                  <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin']">Show Leave</a></li>-->
-              <!--                  <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>-->
+              <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin']">Show Leave</a></li>
+              <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>
             </ul>
           </li>
-
-
-
-
-
-
 
 
 
