--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -17,6 +17,28 @@
                  id="endDate"
           >
         </div>
+
+
+        <div class="form-group col-md-4">
+
+
+          <label>Department</label>
+
+          <ng-multiselect-dropdown
+            [placeholder]="'Select Department'"
+            [data]="departments"
+            [(ngModel)]="selectedDropDown"
+            [settings]="dropdownSettings2"
+            (onSelect)="onItemSelectDepartment($event)"
+            (onDeSelect)="onItemDeSelectDepartment($event)"
+
+
+          >
+          </ng-multiselect-dropdown>
+
+
+        </div>
+
         <div class="form-group col-md-4">
 
 
@@ -60,50 +82,39 @@
 
 
 
-<!--        <div class="form-group col-md-3">-->
-
-<!--          <button class="btn btn-success" (click)="searchAttendance()">Search</button>-->
-<!--        </div>-->
 
 
-<!--        <div class="form-group col-md-3">-->
 
-<!--          <button class="btn btn-info pull-right" (click)="generateDetailsExcel()" *ngxPermissionsOnly="['admin']">Generate Details Report</button>-->
+      </div>
+      <div class="row">
 
-<!--        </div>-->
+        <!--        <div class="form-group col-md-3">-->
+
+        <!--          <button class="btn btn-success" (click)="searchAttendance()">Search</button>-->
+        <!--        </div>-->
+
+
+        <!--        <div class="form-group col-md-3">-->
+
+        <!--          <button class="btn btn-info pull-right" (click)="generateDetailsExcel()" *ngxPermissionsOnly="['admin']">Generate Details Report</button>-->
+
+        <!--        </div>-->
         <div class="form-group col-md-3">
 
           <button class="btn btn-info pull-right" (click)="generateINOUTExcel()" *ngxPermissionsOnly="['admin']">Report (only in/out )</button>
 
         </div>
-<!--        <div class="form-group col-md-3">-->
+        <!--        <div class="form-group col-md-3">-->
 
-<!--          <button class="btn btn-info pull-right" (click)="generateMonthlyINOUTExcel()" *ngxPermissionsOnly="['admin']">Monthly Report</button>-->
+        <!--          <button class="btn btn-info pull-right" (click)="generateMonthlyINOUTExcel()" *ngxPermissionsOnly="['admin']">Monthly Report</button>-->
 
-<!--        </div>-->
+        <!--        </div>-->
+
 
       </div>
       <hr>
 
-      <table *ngIf="search">
 
-        <thead>
-        <tr>
-          <th>attDeviceUserId</th>
-          <th>firstName</th>
-          <th>attendanceDate</th>
-          <th>checkInFull</th>
-          <th>checkoutFull</th>
-          <th>late</th>
-          <th>lateTime</th>
-          <th>scheduleIn</th>
-          <th>scheduleOut</th>
-          <th>workingTime</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
 
 
 
