--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -94,7 +94,7 @@
       </div>
 
       <div class="col-md-12">
-        <button class="btn btn-success">Save Leave Limit</button>
+        <button class="btn btn-success" (click)="submitLeaveLimit()" >Save Leave Limit</button>
       </div>
 
 
