--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -173,6 +173,14 @@
 
                 </ul>
               </li>
+              <li class="has-submenu" *ngxPermissionsOnly="['admin']">
+                <a href="#">Designation</a>
+                <ul class="submenu">
+                  <li><a routerLink="configuration/designation/add">Add Designation</a></li>
+
+
+                </ul>
+              </li>
 
 
 <!--              <li class="has-submenu" *ngxPermissionsOnly="['admin']">-->
