--- a/frontend/src/app/components/user/employee/employee.component.html
+++ b/frontend/src/app/components/user/employee/employee.component.html
@@ -3,7 +3,7 @@
     <div class="card-header">Employee Details</div>
 
     <div class="card-body">
-      <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" >Add New</a>  <br><br>
+      <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" routerLink="add">Add New</a>  <br><br>
       <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
         <tr>
