--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -64,6 +64,14 @@
         <label>Attendance Device Pin</label>
         <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.attDeviceUserId" class="form-control">
       </div>
+      <div class="form-group col-md-4">
+        <label>Attendance IN Device</label>
+        <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.inDeviceNo" class="form-control">
+      </div>
+      <div class="form-group col-md-4">
+        <label>Attendance OUT Device</label>
+        <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.outDeviceNo" class="form-control">
+      </div>
 
 
 
