--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -88,10 +88,10 @@
       </div>
       <div class="row">
 
-        <!--        <div class="form-group col-md-3">-->
+                <div class="form-group col-md-3">
 
-        <!--          <button class="btn btn-success" (click)="searchAttendance()">Search</button>-->
-        <!--        </div>-->
+                    <button class="btn btn-success" (click)="searchAttendance()">Search</button>
+                </div>
 
 
         <!--        <div class="form-group col-md-3">-->
@@ -113,6 +113,75 @@
 
       </div>
       <hr>
+
+      <div class="row">
+
+        <table class="table table-striped table-hover" >
+
+          <thead>
+
+          <tr>
+
+            <th>Id</th>
+            <th>FullName</th>
+            <th>Department</th>
+            <th>Date</th>
+            <th>In Time</th>
+            <th>Out Time</th>
+
+
+          </tr>
+
+          </thead>
+
+          <tbody>
+          <tr *ngFor="let adD of attendenceDataDates">
+            <th>
+              {{attendenceDataAllEmp.attDeviceUserId}}
+
+            </th>
+            <th>
+              {{attendenceDataAllEmp.empFullname}}
+
+            </th>
+            <th>
+              {{attendenceDataAllEmp.departmentName}}
+
+            </th>
+            <th>
+              {{adD.date}}
+
+            </th>
+
+            <th >
+                    <span (loadeddata)="getPreAndNextDate()" *ngFor="let attendance of attendenceDataResults; index as i" >
+
+                      <span *ngIf="attendance.attendanceDate==adD.date">
+
+                        <span *ngIf="i==0 && attendance.inTime==null">
+                          {{attendance.accessTime2 | date : "shortTime" }}
+                        </span>
+                        <span *ngIf="i==0 && attendance.inTime !=null && attendance.outTime != null && attendance.inTime < attendance.outTime">
+                          {{attendance.accessTime2 | date : "shortTime" }}
+                          <span *ngIf="attendance.inTime=='00:00:00'">
+
+
+
+                          </span>
+                        </span>
+                      </span>
+
+
+
+                    </span>
+            </th>
+
+          </tr>
+
+          </tbody>
+        </table>
+
+      </div>
 
 
 
