--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -67,6 +67,7 @@
             <option value="2">Daily All Punch</option>
             <option value="3">Monthly Report</option>
             <option value="4">Final Report-1</option>
+            <option value="6">Final Report-3</option>
           </select>
         </div>
 <!--        <div class="form-group col-md-8">-->
