--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -225,6 +225,15 @@
               <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>
             </ul>
           </li>
+          <li class="has-submenu">
+            <a href="#">Govt Holiday</a>
+            <ul class="submenu">
+<!--              <li><a routerLink="leave/apply">Apply Leave</a></li>-->
+<!--              <li><a routerLink="configuration/govtHoliday" *ngxPermissionsOnly="['admin']">Create Holiday</a></li>-->
+              <li><a routerLink="configuration/govtHoliday/show" *ngxPermissionsOnly="['admin']">Show Holiday</a></li>
+
+            </ul>
+          </li>
 
 
 
