--- a/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
+++ b/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
@@ -126,13 +126,13 @@
       <div class="form-group col-md-3">
         <label>Start Date</label>
         <input bsDatepicker
-               [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD',clearBtn: true }" name="resignDate" id="startDate" (bsValueChange)="rerender()" class="form-control input">
+               [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" id="startDate" (bsValueChange)="rerender()" class="form-control input">
       </div>
 
       <div class="form-group col-md-3">
         <label>End Date</label>
         <input bsDatepicker
-               [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD',clearBtn: true }" (bsValueChange)="rerender()" id="endDate" name="resignDate"  class="form-control input">
+               [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" (bsValueChange)="rerender()" id="endDate" name="resignDate"  class="form-control input">
       </div>
 
       <div  class="form-group col-md-3">
