--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -235,6 +235,14 @@
             </ul>
           </li>
 
+          <li class="has-submenu">
+            <a href="#">Adjustment</a>
+            <ul class="submenu">
+              <li><a routerLink="adjustment/showAdjustment" *ngxPermissionsOnly="['admin']">Show Adjustment</a></li>
+
+            </ul>
+          </li>
+
 
 
           <!--<li class="has-submenu">-->
