--- a/frontend/src/app/components/report/extra-work-history/extra-work-history.component.html
+++ b/frontend/src/app/components/report/extra-work-history/extra-work-history.component.html
@@ -27,6 +27,11 @@
         </select>
       </div>
 
+      <div class="form-group col-md-12">
+
+        <button class="btn btn-success pull-left" (click)="calculateAdjustment()">Calculate</button>
+      </div>
+
 
 
 
