--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -62,10 +62,10 @@
             <option value="">Select Type</option>
             <option value="1">Daily IN/OUT</option>
             <option value="2">Daily All Punch</option>
-            <option value="3">Monthly Report</option>
-            <option value="4">Final Report-1</option>
-            <option value="5">Final Report-2</option>
-            <option value="6">Final Report-3</option>
+            <option value="3">Monthly Report test</option>
+            <option value="4">Monthly Report</option>
+            <option value="5">Punch Report</option>
+            <option value="6">Final Report</option>
           </select>
 
         </div>
