--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -34,10 +34,24 @@
 
 
                         >
-                </ng-multiselect-dropdown>
+                    </ng-multiselect-dropdown>
 
 
-            </div>
+                </div>
+
+              <div class="form-group col-md-4">
+
+                <label>Roster Info</label>
+                <select class="form-control" id="RosterInfo"  name="RosterInfo">
+                  <option value="">Select Roster</option>
+                  <option *ngFor="let RI of RosterInfo" value="{{RI.shifId}}">{{RI.shiftName}}</option>
+
+
+                </select>
+
+              </div>
+
+
 
             <div class="form-group col-md-4">
 
@@ -66,6 +80,7 @@
             <option value="4">Final Report-1</option>
             <option value="5">Final Report-2</option>
             <option value="6">Final Report-3</option>
+            <option value="7">Roster Wise</option>
           </select>
 
         </div>
