--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -236,9 +236,17 @@
           </li>
 
           <li class="has-submenu">
-            <a href="#">Adjustment</a>
+            <a >Adjustment</a>
             <ul class="submenu">
               <li><a routerLink="adjustment/showAdjustment" *ngxPermissionsOnly="['admin']">Show Adjustment</a></li>
+
+            </ul>
+          </li>
+
+          <li class="has-submenu">
+            <a >Swap</a>
+            <ul class="submenu">
+              <li><a routerLink="swap/showSwap">Show Swap</a></li>
 
             </ul>
           </li>
