--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -79,7 +79,9 @@
             <option value="4">Final Report-1</option>
             <option value="5">Final Report-2</option>
             <option value="6">Final Report-3</option>
-            <option value="7">Roster Wise</option>
+            <option value="7">Roster Wise Report-1</option>
+            <option value="8">Roster Wise Report-2</option>
+            <option value="9">Roster Wise Report-3</option>
           </select>
 
         </div>
