--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -40,7 +40,7 @@
 
       <div class=" form-group col-md-4">
 
-        <label >Employee Id <span style="color: red">*</span></label>
+        <label >Employee Id Card no</label>
 
         <input type="text" class="form-control" placeholder="employee id" [(ngModel)]="employeeBasicForm.EmployeeId" required>
 
@@ -87,7 +87,7 @@
       <!--<div class="col-md-12"><hr></div>-->
 
       <div class="form-group col-md-4">
-        <label>Email</label>
+        <label>Email <span style="color: red">*</span></label>
         <input type="email" class="form-control" name="email" placeholder="email" [(ngModel)]="employeeBasicForm.email" required>
       </div>
 
