--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -4,6 +4,9 @@
   </div>
 
   <div class="card-body">
+    <div *ngFor="let p of error" class="alert alert-secondary" role="alert">
+      {{p}}
+    </div>
     <div class="row">
 
       <div class="form-group col-md-6">
@@ -29,7 +32,7 @@
       </div>
 
       <div class="form-group col-md-3">
-        <label>Status</label>
+        <label>Status <span style="color: red">*</span></label>
         <select class="form-control" [(ngModel)]="employeeJoiningForm.fkActivationStatus">
           <option value="1">Active</option>
           <option value="2">Inactive</option>
@@ -61,16 +64,16 @@
         <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.accessPin" class="form-control">
       </div>
       <div class="form-group col-md-4">
-        <label>Attendance Device Pin</label>
+        <label>Employee Id <span style="color: red">*</span></label>
         <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.attDeviceUserId" class="form-control">
       </div>
       <div class="form-group col-md-4">
-        <label>Attendance IN Device</label>
-        <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.inDeviceNo" class="form-control">
+        <label>Attendance IN Device<span style="color: red">*</span></label>
+        <input type="text" name="accessPin" placeholder="in device number" [(ngModel)]="employeeJoiningForm.inDeviceNo" class="form-control">
       </div>
       <div class="form-group col-md-4">
-        <label>Attendance OUT Device</label>
-        <input type="text" name="accessPin" placeholder="pin" [(ngModel)]="employeeJoiningForm.outDeviceNo" class="form-control">
+        <label>Attendance OUT Device<span style="color: red">*</span></label>
+        <input type="text" name="accessPin" placeholder="out device number" [(ngModel)]="employeeJoiningForm.outDeviceNo" class="form-control">
       </div>
 
 
