--- a/frontend/src/app/components/configuration/swap/show-swap/show-swap.component.html
+++ b/frontend/src/app/components/configuration/swap/show-swap/show-swap.component.html
@@ -15,7 +15,7 @@
         <th>empFullnameFor</th>
         <th>swap_for_date</th>
         <th>swap_for_shift</th>
-
+        <th>Status</th>
         <th>Action</th>
 
 
