--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -246,7 +246,7 @@
           <li class="has-submenu">
             <a >Swap</a>
             <ul class="submenu">
-              <li><a *ngxPermissionsOnly="['admin','Manager']"  routerLink="swap/showSwap">Show Swap</a></li>
+              <li><a *ngxPermissionsOnly="['admin','Manager','Hr']"  routerLink="swap/showSwap">Show Swap</a></li>
               <li><a routerLink="swap/RequestSwap">Request Swap</a></li>
 
             </ul>
