--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -247,6 +247,7 @@
             <a >Swap</a>
             <ul class="submenu">
               <li><a *ngxPermissionsOnly="['admin','Manager','Hr']"  routerLink="swap/showSwap">Show Swap</a></li>
+              <li><a *ngxPermissionsOnly="['admin','Manager','Hr']"  routerLink="swap/showTimeSwap">Show Time Swap</a></li>
               <li><a routerLink="swap/RequestSwap">Request Swap</a></li>
 
             </ul>
