--- a/frontend/src/app/components/configuration/designation/add-designation/add-designation.component.html
+++ b/frontend/src/app/components/configuration/designation/add-designation/add-designation.component.html
@@ -48,9 +48,9 @@
         <thead>
         <tr>
           <th>Designation Name</th>
-          <th>shortName</th>
-          <th>salaryGrade</th>
-          <th>desigLevel</th>
+          <th>Short Name</th>
+          <th>Salary Grade</th>
+          <th>Desig Level</th>
           <th>Action</th>
         </tr>
         </thead>
