--- a/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
+++ b/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
@@ -168,7 +168,7 @@
 
 <ng-template #future let-c="close" let-d="dismiss" >
   <div class="modal-header">
-    <h4 class="modal-title">Future</h4>
+    <h4 class="modal-title">Set Future Roaster</h4>
     <button type="button" class="close" aria-label="Close" (click)="modalClose()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -223,7 +223,7 @@
 
 <div class="container-fluid">
   <div class="card">
-    <div class="card-header">Employee Details</div>
+    <div class="card-header"><h2>Roaster Assign</h2></div>
 
     <div class="card-body">
       <div class="row">
@@ -264,7 +264,7 @@
           <button class="btn btn-success btn-sm" style="margin-top: 30px" (click)="findAttendence()">Find</button>
         </div>
         <div class="form-group col-md-4">
-          <button class="btn btn-success btn-sm" style="margin-top: 30px" (click)="viewFutureRosterForm(future)">Set future Roster</button>
+          <button class="btn btn-success btn-sm" style="margin-top: 30px" (click)="viewFutureRosterForm(future)">Set Future Roster</button>
         </div>
 
 
