--- a/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
+++ b/frontend/src/app/components/configuration/not-shift-assign-list/not-shift-assign-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
   <div class="card">
-    <div class="card-header">Roster Not Assigned List</div>
+    <div class="card-header"><h2>Roster Not Assigned List</h2></div>
 
     <div class="card-body">
       <div class="row">
