--- a/frontend/src/app/components/configuration/swap/show-swap/show-swap.component.html
+++ b/frontend/src/app/components/configuration/swap/show-swap/show-swap.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    Showing Swap Request
+   <h2>Swap Request Information</h2>
     <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2"  >Add New</a>  <br><br>
   </div>
 
@@ -9,12 +9,12 @@
     <table id="example" datatable class="table table-striped table-bordered" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
       <thead>
       <tr>
-        <th>empFullnameBy</th>
-        <th>swap_by_date</th>
-        <th>swap_by_shift</th>
-        <th>empFullnameFor</th>
-        <th>swap_for_date</th>
-        <th>swap_for_shift</th>
+        <th>Full Name By</th>
+        <th>Swap By Date</th>
+        <th>Swap By Shift</th>
+        <th>Full Name For</th>
+        <th>Swap For Date</th>
+        <th>Swap For Shift</th>
         <th>Status</th>
         <th>Action</th>
 
