--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -1,6 +1,7 @@
 <div class="card">
   <div class="card-header">
-    Joining Info
+
+    <h2>Joining Information </h2>
   </div>
 
   <div class="card-body">
