--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -1,6 +1,6 @@
 <div class="card container">
   <div class="card-header-pills">
-    <h3 align="center" style="font-family: 'Righteous', cursive;">Add Department</h3>
+    <h2 align="center" style="font-family: 'Righteous', cursive;">Add Department</h2>
   </div>
   <div class="card-body">
     <div class="row">
@@ -17,11 +17,11 @@
 
       <div class="form-group col-md-6">
         <label>Department Name</label>
-        <input type="text" class="form-control" placeholder="dept name" name="departmentName" [(ngModel)]="departmentField.departmentName">
+        <input type="text" class="form-control" placeholder="Dept Name" name="departmentName" [(ngModel)]="departmentField.departmentName">
       </div>
       <div class="form-group col-md-6">
         <label>Department Head</label>
-        <input type="text" class="form-control" placeholder="dept Head name" name="departmentHead" [(ngModel)]="departmentField.deptHead">
+        <input type="text" class="form-control" placeholder="Dept Head Name" name="departmentHead" [(ngModel)]="departmentField.deptHead">
       </div>
 
       <div class="form-group col-md-6">
