--- a/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
+++ b/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
@@ -2,19 +2,19 @@
 <!--modal-->
 <ng-template #addGovtHoliday let-c="close" let-d="dismiss" >
   <div class="modal-header">
-    <h4 class="modal-title">Govt Holiday</h4>
+    <h2 class="modal-title">Add Govment Holiday</h2>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
 
-    <input type="hidden" [(ngModel)]="govtHolidayObj.id" placeholder="holiday Name" class="form-control">
+    <input type="hidden" [(ngModel)]="govtHolidayObj.id" placeholder="Holiday Name" class="form-control">
 
     <div class="row">
       <div class="form-group col-md-12">
         <label>Name</label>
-        <input type="text" [(ngModel)]="govtHolidayObj.holidayName" placeholder="holiday Name" class="form-control">
+        <input type="text" [(ngModel)]="govtHolidayObj.holidayName" placeholder="Holiday Name" class="form-control">
       </div>
       <div class="form-group col-md-6">
         <label>Start Date</label>
@@ -27,7 +27,7 @@
                [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD'}" [(ngModel)]="govtHolidayObj.endDate" placeholder="End Date" class="form-control">
       </div>
       <div class="form-group col-md-6">
-        <label>Number of days</label>
+        <label>Number of Days</label>
         <input type="text"  [(ngModel)]="govtHolidayObj.noOfDays" placeholder="End Date" class="form-control">
       </div>
       <div class="form-group col-md-6">
@@ -42,7 +42,7 @@
       </div>
       <div class="form-group col-md-12">
         <label>Purpose</label>
-        <textarea  [(ngModel)]="govtHolidayObj.purpose" placeholder="shift" class="form-control"></textarea>
+        <textarea  [(ngModel)]="govtHolidayObj.purpose" placeholder="Shift" class="form-control"></textarea>
       </div>
 
       <div class="form-group col-md-12">
@@ -59,7 +59,7 @@
 <!--modal-->
 <ng-template #editGovtHoliday let-c="close" let-d="dismiss" >
   <div class="modal-header">
-    <h4 class="modal-title">Govt Holiday</h4>
+    <h4 class="modal-title">Add Govment Holiday</h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="form-group col-md-12">
         <label>Name</label>
-        <input type="text" [(ngModel)]="govtHolidayObj.holidayName" placeholder="holiday Name" class="form-control">
+        <input type="text" [(ngModel)]="govtHolidayObj.holidayName" placeholder="Holiday Name" class="form-control">
       </div>
       <div class="form-group col-md-6">
         <label>Start Date</label>
@@ -82,7 +82,7 @@
                [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD'}" [(ngModel)]="govtHolidayObj.endDate" placeholder="End Date" class="form-control">
       </div>
       <div class="form-group col-md-6">
-        <label>Number of days</label>
+        <label>Number of Days</label>
         <input type="text"  [(ngModel)]="govtHolidayObj.noOfDays" placeholder="End Date" class="form-control">
       </div>
       <div class="form-group col-md-6">
@@ -97,7 +97,7 @@
       </div>
       <div class="form-group col-md-12">
         <label>Purpose</label>
-        <textarea  [(ngModel)]="govtHolidayObj.purpose" placeholder="shift" class="form-control"></textarea>
+        <textarea  [(ngModel)]="govtHolidayObj.purpose" placeholder="Shift" class="form-control"></textarea>
       </div>
 
       <div class="form-group col-md-12">
@@ -115,7 +115,7 @@
 
 <div class="card">
   <div class="card-header">
-    Showing Govt Holidays
+    <h2>Govment Holidays Information</h2>
     <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" (click)="addModal(addGovtHoliday)" >Add New</a>  <br><br>
   </div>
 
@@ -138,7 +138,7 @@
       <div  class="form-group col-md-3">
         <label>Status</label>
         <select (change)="rerender()" id="HolidayStatus" class="form-control">
-        <option selected value="">select option</option>
+        <option selected value="">Select Option</option>
         <option value="Approved">Approved</option>
         <option value="Pending">Pending</option>
         <option value="Rejected">Rejected</option>
@@ -163,7 +163,7 @@
         <th>Days</th>
         <th>Purpose</th>
         <th>Status</th>
-        <th>Created by</th>
+        <th>Created By</th>
         <th>Action</th>
 
 
