--- a/frontend/src/app/components/configuration/swap/request-swap/request-swap.component.html
+++ b/frontend/src/app/components/configuration/swap/request-swap/request-swap.component.html
@@ -1,7 +1,7 @@
 <!--modal-->
 <ng-template #editrequestSwap let-c="close" let-d="dismiss" >
   <div class="modal-header">
-    <h4 class="modal-title">Govt Holiday</h4>
+    <h2 class="modal-title">Govt Holiday</h2>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -11,7 +11,7 @@
 
       <div class="row">
         <div class="form-group col-md-3">
-          <label>Swap_with_Date</label>
+          <label>Swap With Date</label>
           <input bsDatepicker
                  [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" name="swap_by_Date" [(ngModel)]="swap.swap_by_Date" class="form-control input">
         </div>
@@ -31,12 +31,12 @@
         </div>
       </div>
 
-      <div class="row">
-        <div align="center">
-          <label style="text-align: center">Swap</label>
-        </div>
+<!--      <div class="row">-->
+<!--        <div align="center">-->
+<!--          <label style="text-align: center">Swap</label>-->
+<!--        </div>-->
 
-      </div>
+<!--      </div>-->
 
       <div class="row">
 
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group col-md-4">
-          <label>Swap_for_Date</label>
+          <label>Swap For Date</label>
           <input bsDatepicker
                  [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" name="Swap_for_Date" [(ngModel)]="swap.swap_for_date" class="form-control input">
         </div>
@@ -98,7 +98,7 @@
 <div class="card-body">
 <div class="row">
   <div class="form-group col-md-3">
-    <label>Swap_with_Date</label>
+    <label>Swap With Date</label>
     <input bsDatepicker
            [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" name="swap_by_Date" [(ngModel)]="swap.swap_by_Date" class="form-control input">
   </div>
@@ -118,12 +118,12 @@
   </div>
 </div>
 
-  <div class="row">
-    <div align="center">
-      <label style="text-align: center">Swap</label>
-    </div>
+<!--  <div class="row">-->
+<!--    <div align="center">-->
+<!--      <label style="text-align: center">Swap</label>-->
+<!--    </div>-->
 
-  </div>
+<!--  </div>-->
 
 <div class="row">
 
@@ -143,7 +143,7 @@
   </div>
 
   <div class="form-group col-md-3">
-    <label>Swap_for_Date</label>
+    <label>Swap For Date</label>
     <input bsDatepicker
            [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" name="Swap_for_Date" [(ngModel)]="swap.swap_for_date" class="form-control input">
   </div>
@@ -176,12 +176,12 @@
     <table id="example" datatable class="table table-striped table-bordered" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
       <thead>
       <tr>
-        <th>empFullnameBy</th>
-        <th>swap_by_date</th>
-        <th>swap_by_shift</th>
-        <th>empFullnameFor</th>
-        <th>swap_for_date</th>
-        <th>swap_for_shift</th>
+        <th>Full Name By</th>
+        <th>Swap By Date</th>
+        <th>Swap By Shift</th>
+        <th>Full Name For</th>
+        <th>Swap For Date</th>
+        <th>Swap For Shift</th>
         <th>Status</th>
 
         <th>Action</th>
