--- a/frontend/src/app/components/user/employee/employee.component.html
+++ b/frontend/src/app/components/user/employee/employee.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="card">
-    <div class="card-header">Employee Details</div>
+    <div class="card-header"><h2>All Employee Information</h2></div>
 
     <div class="card-body">
       <a style=" float: right" class="btn btn-outline-primary mb-2 mr-2" routerLink="add">Add New</a>  <br><br>
