--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -82,6 +82,7 @@
             <option value="7">Roster Wise Report-1</option>
             <option value="8">Roster Wise Report-2</option>
             <option value="9">Roster Wise Report-3</option>
+            <option value="10">Multiple shift Report</option>
           </select>
 
         </div>
