--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -39,6 +39,7 @@
                 <select class="form-control" id="RosterInfo"  name="RosterInfo">
                     <option value="">Select Roster</option>
                     <option *ngFor="let RI of RosterInfo" value="{{RI.shiftId}}">{{RI.shiftName}}</option>
+                    <option value="allRoster">All Roster</option>
                 </select>
             </div>
             <div *ngIf="empDiv" class="form-group col-md-3">
@@ -71,7 +72,7 @@
                 <option value="7">Roster Wise Report-1</option>
                 <option value="8">Roster Wise Report-2</option>
                 <option value="9">Roster Wise Report-3</option>
-                <option value="10">Multiple shift Report</option>
+
             </select>
 
 
