--- a/frontend/src/app/components/configuration/designation/add-designation/add-designation.component.html
+++ b/frontend/src/app/components/configuration/designation/add-designation/add-designation.component.html
@@ -31,6 +31,14 @@
 
       </div>
 
+      <div class="form-group col-md-4">
+        <label>Status <span style="color: red">*</span></label>
+        <select name="status" class="form-control" [(ngModel)]="designationForm.status">
+          <option value="active">Active</option>
+          <option value="inactive">Inactive</option>
+        </select>
+      </div>
+
       <div class="form-group col-md-2" *ngIf="checkId();else other_content">
         <button class="btn btn-success" (click)="onSubmit()">Insert</button>
       </div>
