--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -34,6 +34,15 @@
         </select>
       </div>
 
+
+      <div class="form-group col-md-4">
+        <label>Status <span style="color: red">*</span></label>
+        <select name="status" class="form-control" [(ngModel)]="departmentField.status">
+          <option value="active">Active</option>
+          <option value="inactive">Inactive</option>
+        </select>
+      </div>
+
 <!--      <div class="form-group col-md-6">-->
 <!--        <label>Department Level</label>-->
 <!--        <select (change)="onChangeEvent($event)" class="form-control" id="deptLevel">-->
