--- a/frontend/src/app/components/configuration/dept-wise-roster/dept-wise-roster.component.html
+++ b/frontend/src/app/components/configuration/dept-wise-roster/dept-wise-roster.component.html
@@ -1,3 +1,122 @@
-<p>
-  dept-wise-roster works!
-</p>
+<!--modal-->
+<ng-template #content let-c="close" let-d="dismiss" >
+  <div class="modal-header">
+    <h4 class="modal-title">Change Roster</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modalClose()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+
+    <div class="row" >
+
+      <div class="form-group col-md-3">
+        <label>{{ChangeRosterInfo[0]['shiftName']}}</label>
+      </div>
+      <div class="form-group col-md-9">
+        <label>Employees</label>
+
+        <ng-multiselect-dropdown
+          [placeholder]="'Select Employees'"
+          [data]="employees"
+          [(ngModel)]="selectedDropDownEmp"
+          [settings]="dropdownSettingsEmp"
+
+        >
+        </ng-multiselect-dropdown>
+
+      </div>
+
+
+
+
+
+    </div>
+
+  </div>
+</ng-template>
+
+
+
+
+<div class="container-fluid">
+  <div class="card">
+    <div class="card-header"><h2>Department Wise Roster</h2></div>
+
+    <div class="card-body">
+      <div class="row">
+        <div class="form-group col-md-3">
+          <label>Date</label>
+          <input class="form-control"
+                 bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD'}" id="Date">
+        </div><br>
+
+        <div class="form-group col-md-4">
+          <label> &nbsp;</label>
+          <ng-multiselect-dropdown
+            [placeholder]="'Select Department'"
+            [data]="departments"
+            [(ngModel)]="selectedDropDown"
+            [settings]="dropdownSettings2"
+
+          >
+          </ng-multiselect-dropdown>
+        </div>
+        <br>
+
+      </div>
+
+      <div class="row">
+
+        <div class="form-group col-md-3 ">
+
+          <button class="btn btn-success" (click)="searchRoster()" style="margin-top: 25px;">Search</button>
+        </div>
+
+
+
+
+      </div>
+
+    </div>
+
+    <div class="card-body">
+      <div class="row">
+        <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+
+                <th>Roster name</th>
+                <th>Emp (Duty)</th>
+                <th>Emp (Day off)</th>
+                <th>Action</th>
+
+
+              </tr>
+
+            </thead>
+          <tbody>
+            <tr *ngFor="let Roster of RosterInfo; index as i">
+
+              <td>{{Roster['shiftName']}}</td>
+              <td>{{Roster['EmpRosterNames']}}</td>
+              <td>{{Roster['EmpRosterOffDutyNames']}}</td>
+
+              <td><button class="btn btn-info" (click)="ChangeRosterLog(Roster['shiftId'],content)" >Change</button> &nbsp;&nbsp;</td>
+
+            </tr>
+          </tbody>
+
+
+
+
+        </table>
+
+      </div>
+
+
+
+    </div>
+  </div>
+</div>
