--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -162,6 +162,7 @@
                   <li><a routerLink="configuration/shift">All Roster</a></li>
 <!--                  <li><a routerLink="configuration/shift/assign">Shift Roster</a></li>-->
                   <li><a routerLink="configuration/shift/edit-assign">Roster Assign</a></li>
+                  <li><a routerLink="configuration/roster/dept-wise-static-roster">department wise Static Roster</a></li>
                   <li><a routerLink="configuration/roster/dept-wise-assign">department wise Roster Assign</a></li>
                   <li><a routerLink="configuration/not-shift-assigned-list">Roster not Assigned list</a></li>
                 </ul>
