--- a/frontend/src/app/components/configuration/dept-wise-static-roster/dept-wise-static-roster.component.html
+++ b/frontend/src/app/components/configuration/dept-wise-static-roster/dept-wise-static-roster.component.html
@@ -11,12 +11,26 @@
     <div class="row" >
 
       <div class="form-group col-md-9">
-        <label>Employees</label>
+        <label>Duty Employees</label>
 
         <ng-multiselect-dropdown
           [placeholder]="'Select Employees'"
           [data]="employees"
           [(ngModel)]="selectedDropDownEmp"
+          [settings]="dropdownSettingsEmp"
+          (onSelect)="test($event)"
+
+        >
+        </ng-multiselect-dropdown>
+
+      </div>
+      <div class="form-group col-md-9">
+        <label>day off</label>
+
+        <ng-multiselect-dropdown
+          [placeholder]="'Select Employees'"
+          [data]="employees"
+          [(ngModel)]="selectedDropDownoffDutyEmp"
           [settings]="dropdownSettingsEmp"
           (onSelect)="test($event)"
 
